fix: moved logo to the left to improve header visibility

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -8,7 +8,7 @@
     position: absolute;
     background-color: white;
     padding: 1.25rem;
-    left: 2.5rem;
+    // left: 2.5rem;
 
 }
 
