--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,6 @@ a {
   position: absolute;
   background-color: white;
   padding: 1.25rem;
-  left: 2.5rem;
 }
 
 .header-nav {
